@@ -114,8 +114,7 @@ Atmel's JTAG ICE (both mkI and mkII) is supported as well to up- or download mem
 areas from/to an AVR target (no support for on-chip debugging).
 For the JTAG ICE mkII, both JTAG and ISP mode are supported.
 .Pp
-The AVR Dragon is supported in JTAG and ISP mode.
-(High-voltage programming is not yet supported.)
+The AVR Dragon is supported in all modes (ISP, JTAG, HVSP, PP).
 When used in JTAG mode, the AVR Dragon behaves similar to a
 JTAG ICE mkII, so all device-specific comments for that device
 will apply as well.
