@@ -88,8 +88,10 @@ static int parse_cmdbits(OPCODE * op);
 %token K_DEFAULT_SERIAL
 %token K_DESC
 %token K_DEVICECODE
+%token K_DRAGON_HVSP
 %token K_DRAGON_ISP
 %token K_DRAGON_JTAG
+%token K_DRAGON_PP
 %token K_STK500_DEVCODE
 %token K_AVR910_DEVCODE
 %token K_EEPROM
@@ -439,6 +441,12 @@ prog_parm :
     }
   } |
 
+  K_TYPE TKN_EQUAL K_DRAGON_HVSP {
+    {
+      stk500v2_dragon_hvsp_initpgm(current_prog);
+    }
+  } |
+
   K_TYPE TKN_EQUAL K_DRAGON_ISP {
     {
       stk500v2_dragon_isp_initpgm(current_prog);
@@ -448,6 +456,12 @@ prog_parm :
   K_TYPE TKN_EQUAL K_DRAGON_JTAG {
     {
       jtagmkII_dragon_initpgm(current_prog);
+    }
+  } |
+
+  K_TYPE TKN_EQUAL K_DRAGON_PP {
+    {
+      stk500v2_dragon_pp_initpgm(current_prog);
     }
   } |
 
